[workspace]
members = [ "crates/*" ]

resolver = "2"

[workspace.dependencies]
opsgenie-client = { version = "0.1.0", path = "crates/opsgenie-client" }
anyhow = "1.0.86"
envy = "0.4.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version =  "0.3.18", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
]}
thiserror = "1"
url = { version = "2.5.2", features = ["serde"] }
vise = "0.1.0"
vise-exporter = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
